--- a/index.html
+++ b/index.html
@@ -1,141 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PoorCoin (POOR) • Official Site</title>
-  <meta name="description" content="PoorCoin (POOR) — community-driven meme token on BNB Smart Chain." />
-  <link rel="icon" href="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmdn6u45hjfha37owqs1qzxb7c2npz9uw8b3yk7e5e/poorcoin-logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PoorCoin (POOR) - Official Website</title>
   <style>
-    :root{
-      --bg:#f8fbf7;
-      --card:#ffffff;
-      --text:#1b2b1a;
-      --muted:#5f6f5d;
-      --accent:#27ae60;
-      --accent-2:#1f8f4f;
-      --ring: rgba(39,174,96,.25);
-      --soft:#eef7f0;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9fafb;
+      color: #222;
+      text-align: center;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-    a{color:var(--accent);text-decoration:none}
-    .wrap{max-width:1100px;margin:auto;padding:24px}
-    header{display:flex;gap:16px;align-items:center;justify-content:space-between;margin:10px 0 24px}
-    .brand{display:flex;gap:14px;align-items:center}
-    .brand img{width:56px;height:56px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)}
-    h1{font-size:clamp(28px,4vw,40px);margin:0}
-    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
-    .card{background:var(--card);border-radius:18px;padding:18px;box-shadow:0 8px 24px rgba(0,0,0,.06);border:1px solid #e9efe9}
-    .pill{display:inline-block;background:var(--soft);color:var(--muted);padding:6px 10px;border-radius:999px;font-size:12px;margin:6px 6px 0 0}
-    .buttons{display:flex;flex-wrap:wrap;gap:10px;margin:12px 0}
-    .btn{appearance:none;border:0;border-radius:12px;padding:12px 16px;background:var(--accent);color:#fff;font-weight:600;cursor:pointer;box-shadow:0 8px 22px var(--ring);transition:.15s}
-    .btn:hover{transform:translateY(-1px);background:var(--accent-2)}
-    .btn.outline{background:transparent;color:var(--accent);border:2px solid var(--accent)}
-    .cols{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-    .tile{background:var(--soft);border:1px solid #e3eee5;border-radius:14px;padding:12px}
-    .tile .k{font-size:12px;color:var(--muted)}
-    .tile .v{font-weight:700}
-    .section{margin:22px 0}
-    h2{margin:0 0 10px;font-size:22px}
-    .notice{background:#fff5cc;border:1px solid #ffe28a;color:#6a5200;border-radius:12px;padding:10px 12px;font-size:14px;margin:10px 0}
-    footer{margin:30px 0 10px;color:var(--muted);font-size:14px;text-align:center}
-    code{background:#f1f5f1;border:1px solid #e6eee7;padding:2px 6px;border-radius:6px}
-    .copy{display:flex;gap:8px;align-items:center}
-    .small{font-size:13px;color:var(--muted)}
-    @media (max-width:900px){
-      .grid{grid-template-columns:1fr}
-      .cols{grid-template-columns:1fr 1fr}
+    header {
+      background: #fff;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-    @media (max-width:620px){
-      .cols{grid-template-columns:1fr}
-      header{flex-direction:column;align-items:flex-start}
+    header img {
+      height: 60px;
+    }
+    h1 {
+      color: #1a8917;
+      margin: 10px 0 5px;
+    }
+    h2 {
+      margin-top: 30px;
+      color: #333;
+    }
+    p {
+      max-width: 600px;
+      margin: 10px auto;
+      line-height: 1.6;
+    }
+    .buttons {
+      margin: 20px;
+    }
+    .buttons a, button {
+      display: inline-block;
+      margin: 5px;
+      padding: 12px 20px;
+      background: #1a8917;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: 0.2s;
+      border: none;
+      cursor: pointer;
+    }
+    .buttons a:hover, button:hover {
+      background: #146c12;
+    }
+    .grid {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+    .tile {
+      background: #fff;
+      border-radius: 8px;
+      padding: 20px;
+      width: 200px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .tile .k {
+      font-weight: bold;
+      margin-bottom: 5px;
+      color: #444;
+    }
+    .tile .v {
+      font-size: 1.1em;
+      color: #1a8917;
+    }
+    footer {
+      background: #f1f1f1;
+      padding: 15px;
+      margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="brand">
-        <img alt="PoorCoin Logo" src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmdn6u45hjfha37owqs1qzxb7c2npz9uw8b3yk7e5e/poorcoin-logo.png">
-        <div>
-          <h1>PoorCoin (POOR)</h1>
-          <div class="small">The community-driven meme token on BNB Smart Chain</div>
-        </div>
-      </div>
-      <div class="buttons">
-        <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281" target="_blank" rel="noopener">Buy on PancakeSwap</a>
-        <a class="btn outline" href="https://www.dextools.io/app/en/bnb/pair-explorer/0xec7...e2d1" target="_blank" rel="noopener">DEXTools</a>
-        <button class="btn outline" id="addMeta">Add to MetaMask</button>
-      </div>
-    </header>
+  <header>
+    <img src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnldwmn6u4yjhfh3a7owqslzgxb7c7znpg5ww4b3yky7e5e/poorcoin-logo.png" alt="PoorCoin Logo">
+    <h1>PoorCoin (POOR)</h1>
+    <p>The community-driven token on BNB Smart Chain</p>
+  </header>
 
-    <div class="notice">
-      <strong>Draft data:</strong> Tokenomics & roadmap are being finalized with the community. Values marked as <em>placeholder</em> will be updated after a community vote.
-    </div>
+  <section>
+    <h2>About PoorCoin</h2>
+    <p>PoorCoin (POOR) is a decentralized meme token built by and for the community. 
+       Our mission is to keep things fun, transparent, and fair while we experiment, learn, and grow together.</p>
+  </section>
 
+  <section id="tokenomics">
+    <h2>Tokenomics</h2>
     <div class="grid">
-      <!-- Left column: About + Tokenomics -->
-      <div class="card">
-        <h2>About PoorCoin</h2>
-        <p>PoorCoin (POOR) is a decentralized meme token created by and for the community. Mission: to keep things fun, transparent and fair while we experiment, learn and grow together.</p>
-        <div class="cols" style="margin-top:8px">
-          <div class="tile"><div class="k">Chain</div><div class="v">BNB Smart Chain</div></div>
-          <div class="tile"><div class="k">Ticker</div><div class="v">POOR</div></div>
-          <div class="tile"><div class="k">Total Supply</div><div class="v">1,000,000,000</div></div>
-        </div>
-
-        <div class="section">
-          <h2>Tokenomics <span class="small">(placeholder)</span></h2>
-          <div class="cols">
-            <div class="tile">
-              <div class="k">Buy/Sell Tax</div>
-              <div class="v">0%</div>
-            </div>
-            <div class="tile">
-              <div class="k">Liquidity</div>
-              <div class="v">Locked/Burned: 95% <span class="small">(placeholder)</span></div>
-            </div>
-            <div class="tile">
-              <div class="k">Team</div>
-              <div class="v">5% <span class="small">(vesting – placeholder)</span></div>
-            </div>
-          </div>
-          <p class="small">Update these numbers with exact values (or set tax to your real value). If any allocation differs, change the text and push.</p>
-        </div>
-
-        <div class="section">
-          <h2>Contract</h2>
-          <div class="copy">
-            <code id="addr">0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281</code>
-            <button class="btn outline" id="copyBtn">Copy</button>
-          </div>
-          <div class="buttons" style="margin-top:10px">
-            <a class="btn outline" target="_blank" rel="noopener" href="https://bscscan.com/token/0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281">View on BscScan</a>
-          </div>
-        </div>
+      <div class="tile">
+        <div class="k">Total Supply</div>
+        <div class="v">1,000,000,000 POOR</div>
       </div>
-
-      <!-- Right column: Quick Links -->
-      <div class="card">
-        <h2>Quick Links</h2>
-        <div class="buttons">
-          <a class="btn outline" href="https://t.me/yourtelegram" target="_blank" rel="noopener">Telegram</a>
-          <a class="btn outline" href="https://twitter.com/yourtwitter" target="_blank" rel="noopener">Twitter/X</a>
-        </div>
-        <div class="section">
-          <div class="tile">
-            <div class="k">Trade</div>
-            <div class="v"><a href="https://pancakeswap.finance/swap?outputCurrency=0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281" target="_blank" rel="noopener">Open PancakeSwap</a></div>
-          </div>
-        </div>
-        <div class="section">
-          <div class="tile">
-            <div class="k">DEXTools Pair</div>
-            <div class="v"><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0xec7...e2d1" target="_blank" rel="noopener">View Chart</a></div>
-          </div>
-        </div>
+      <div class="tile">
+        <div class="k">In Circulation</div>
+        <div class="v">~695,089,465 POOR</div>
+      </div>
+      <div class="tile">
+        <div class="k">Liquidity</div>
+        <div class="v">12,000,000 POOR + 0.011 BNB</div>
+      </div>
+      <div class="tile">
+        <div class="k">Holders</div>
+        <div class="v">Growing daily</div>
       </div>
     </div>
+  </section>
 
-    <
+  <section id="contract">
+    <h2>Smart Contract</h2>
+    <p><b>Chain:</b> BNB Smart Chain (BEP20)</p>
+    <p><b>Address:</b> 
+      <span id="contract-address">0x4B336AABbB057503aD2a588201D56F0e6EadC281</span>
+    </p>
+    <button onclick="copyAddress()">Copy Address</button>
+  </section>
+
+  <section>
+    <h2>Quick Links</h2>
+    <div class="buttons">
+      <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
+      <a href="https://twitter.com/yourtwitter" target="_blank">Twitter/X</a>
+      <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank">Buy on PancakeSwap</a>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 PoorCoin | Built by the community
+  </footer>
+
+  <script>
+    function copyAddress() {
+      const address = document.getElementById("contract-address").innerText;
+      navigator.clipboard.writeText(address);
+      alert("Contract address copied: " + address);
+    }
+  </script>
+</body>
+</html>
