--- a/index.html
+++ b/index.html
@@ -1,145 +1,203 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="bg">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin (POOR) - Official Site</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PoorCoin (POOR) — Official</title>
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f7f7f7;
-      color: #222;
+    :root{
+      --bg: #f7f7f9;
+      --card: #ffffff;
+      --muted: #6b7280;
+      --accent: #2b6cb0;
+      --accent-2: #1f7a5b;
+      --shadow: 0 8px 24px rgba(18, 24, 31, 0.06);
+      --radius: 12px;
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
-    header {
-      background-color: #fff;
-      padding: 15px 20px;
-      border-bottom: 1px solid #ddd;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    html,body{height:100%}
+    body{
+      margin:0;
+      background: linear-gradient(180deg,#fbfcfd,#f4f6f8);
+      color: #111827;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
     }
-    header h1 {
-      font-size: 20px;
-      margin: 0;
+
+    .container{
+      max-width:1100px;
+      margin:28px auto;
+      padding:24px;
     }
-    nav a {
-      margin-left: 15px;
-      text-decoration: none;
-      color: #222;
-      font-weight: bold;
+
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      margin-bottom:18px;
     }
-    nav a:hover {
-      color: #007bff;
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
     }
-    .container {
-      max-width: 1000px;
-      margin: 30px auto;
-      padding: 20px;
+    .brand .logo-pill{
+      width:44px;height:44px;border-radius:10px;
+      background:var(--card);
+      box-shadow:var(--shadow);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;color:#111827;
     }
-    .card {
-      background: #fff;
-      padding: 25px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    .brand h1{font-size:18px;margin:0}
+    nav{display:flex;gap:8px;align-items:center}
+
+    a.navlink{
+      text-decoration:none;
+      color:var(--muted);
+      padding:8px 12px;border-radius:8px;
+      font-size:14px;
     }
-    .logo-box {
-      text-align: center;
+    a.navlink:hover{background:rgba(0,0,0,0.03);color:var(--accent)}
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 360px;
+      gap:20px;
     }
-    .logo-box img {
-      max-width: 250px;
-      display: block;
-      margin: 0 auto;
-      background: #fff;
-      padding: 10px;
-      border-radius: 10px;
+
+    /* main card */
+    .card{
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:22px;
     }
-    .links ul {
-      list-style: none;
-      padding: 0;
+
+    .logo-area{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      height:260px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.98));
+      border-radius:12px;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
+      position:relative;
+      overflow:hidden;
     }
-    .links li {
-      margin: 10px 0;
+
+    /* white square behind logo so it looks clean on site and when converted to 32x32 */
+    .logo-inner{
+      width:210px;height:150px;
+      background:#fff;border-radius:10px;
+      display:flex;align-items:center;justify-content:center;
+      box-shadow: 0 6px 18px rgba(18, 24, 31, 0.06);
+      transform: rotate(-12deg);
     }
-    .links a {
-      color: #007bff;
-      text-decoration: none;
+    .logo-inner img{
+      width:85%;height:auto;display:block; filter: none;
     }
-    .links a:hover {
-      text-decoration: underline;
+
+    /* right column */
+    .meta h3{margin:0 0 8px 0;font-size:16px}
+    .meta p{margin:6px 0;color:var(--muted);font-size:14px}
+
+    .links-list{list-style:none;padding:0;margin:10px 0 0 0;display:flex;flex-direction:column;gap:8px}
+    .links-list li a{
+      color:var(--accent);
+      text-decoration:none;font-weight:600;
+      background:rgba(43,108,176,0.06);
+      padding:8px 10px;border-radius:8px;display:inline-block;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #fff;
-      border-top: 1px solid #ddd;
-      font-size: 14px;
-      margin-top: 40px;
+
+    .copy-btn{
+      display:inline-flex;align-items:center;gap:8px;
+      background:var(--accent);color:#fff;border:none;padding:8px 12px;border-radius:8px;
+      cursor:pointer;font-weight:600;
+      box-shadow: 0 6px 14px rgba(43,108,176,0.14);
     }
-    .copy-btn {
-      margin-left: 10px;
-      padding: 2px 8px;
-      border: none;
-      background: #007bff;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 12px;
+    .copy-btn.secondary{
+      background:#fff;color:var(--accent);border:1px solid rgba(0,0,0,0.06);
+      box-shadow:none;
     }
-    .copy-btn:hover {
-      background: #0056b3;
+
+    .tokenomics{
+      margin-top:18px;
+      background:linear-gradient(180deg,#f9fafb,#ffffff);
+      padding:14px;border-radius:10px;border:1px solid rgba(17,24,39,0.03);
+    }
+
+    table.allocation{width:100%;border-collapse:collapse}
+    table.allocation td, table.allocation th{padding:8px 6px;text-align:left;border-bottom:1px dashed rgba(0,0,0,0.04)}
+    table.allocation th{color:var(--muted);font-weight:600;font-size:13px}
+
+    footer{margin-top:18px;text-align:center;color:var(--muted);font-size:14px}
+
+    /* action bar */
+    .actions{display:flex;gap:12px;align-items:center;margin-top:14px}
+    .btn{
+      padding:10px 16px;border-radius:10px;border:none;cursor:pointer;font-weight:700;
+      background:var(--accent);color:#fff;
+      box-shadow: 0 8px 22px rgba(43,108,176,0.12);
+    }
+    .btn.ghost{background:#fff;color:var(--accent);border:1px solid rgba(0,0,0,0.06);box-shadow:none}
+
+    /* responsive */
+    @media (max-width:980px){
+      .grid{grid-template-columns:1fr; padding-bottom:40px}
+      .meta{margin-top:12px}
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>PoorCoin</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Contract</a>
-      <a href="https://t.me/poorcoin_bsc" target="_blank">Telegram</a>
-      <a href="https://x.com/SeeeskoTodorov" target="_blank">Twitter</a>
-      <a href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank">Medium</a>
-    </nav>
-  </header>
-
   <div class="container">
-    <div class="card logo-box">
-      <h2>Official Logo</h2>
-      <img src="poorcoin_logo.png" alt="poorcoin_logo.png">
-    </div>
+    <header>
+      <div class="brand">
+        <div class="logo-pill">POOR</div>
+        <div>
+          <h1>PoorCoin</h1>
+          <div style="color:var(--muted);font-size:13px">The People's Meme Token — BNB Smart Chain (BEP-20)</div>
+        </div>
+      </div>
 
-    <div class="card links">
-      <h2>Project Links</h2>
-      <ul>
-        <li><strong>Website:</strong> <a href="https://poorcoin.net">poorcoin.net</a></li>
-        <li><strong>Contract:</strong> 
-          <span id="contract">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</span>
-          <button class="copy-btn" onclick="copyText('contract')">Copy</button>
-        </li>
-        <li><strong>Email:</strong> 
-          <span id="email">team@poorcoin.net</span>
-          <button class="copy-btn" onclick="copyText('email')">Copy</button>
-        </li>
-      </ul>
-    </div>
-  </div>
+      <nav>
+        <a class="navlink" href="https://poorcoin.net" target="_blank" rel="noopener">Website</a>
+        <a class="navlink" href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Contract</a>
+        <a class="navlink" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
+        <a class="navlink" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">Twitter/X</a>
+        <a class="navlink" href="https://medium.com/@seeesko" target="_blank" rel="noopener">Medium</a>
+      </nav>
+    </header>
 
-  <footer>
-    &copy; 2025 PoorCoin. All Rights Reserved.<br>
-    Contact: <a href="mailto:team@poorcoin.net">team@poorcoin.net</a><br>
-    <strong>BY TODOROV & LESEV</strong>
-  </footer>
+    <main class="grid">
+      <!-- left -->
+      <section class="card">
+        <h2 style="margin-top:0">Official Logo</h2>
 
-  <script>
-    function copyText(id) {
-      const text = document.getElementById(id).innerText;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Copied: " + text);
-      });
-    }
-  </script>
-</body>
-</html>
+        <div class="logo-area" aria-hidden="true">
+          <div class="logo-inner">
+            <!-- Put your file poorcoin_logo.png or poorcoin_logo.svg in the same folder -->
+            <img src="poorcoin_logo.png" alt="POOR logo" id="site-logo" />
+          </div>
+        </div>
+
+        <div class="tokenomics">
+          <h3 style="margin:6px 0 10px 0">Token Distribution (Total supply: 1,000,000,000 POOR)</h3>
+
+          <table class="allocation" aria-label="Token distribution">
+            <thead>
+              <tr><th>Category</th><th>Amount</th><th style="text-align:right">%</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>Team / Main wallet (owner)</td><td>779,704,502</td><td style="text-align:right">77.97%</td></tr>
+              <tr><td>Locked / Vesting (liquidity locks)</td><td>200,000,000</td><td style="text-align:right">20.00%</td></tr>
+              <tr><td>Liquidity (PancakeSwap pool)</td><td>15,750,000</td><td style="text-align:right">1.58%</td></tr>
+              <tr><td>Other holders / buyers</td><td>4,545,498</td><td style="text-align:right">0.45%</td></tr>
+              <tr style="font-weight:700"><td>Total</td><td>1,000,000,000</td><td style="text-align:right">100%</td></tr>
+            </tbody>
+          </table>
+
+          <div class="actions" style="margin-top:14px">
+            <button class="btn" onclick="openLink('https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336')">View on BscScan</button>
